--- a/css/history.css
+++ b/css/history.css
@@ -164,13 +164,15 @@ body { font-family: 'Raleway', 'Gothic A1' , 'Yeseva One'; font-size: 1.6rem; li
 #history P { font-size: 3.6rem; font-family: 'Yeseva One'; padding-bottom: 30px; }
 #history .year { width: 70%; }
 
+#history .year_speed { padding-top: 80px; }
+
 #history .h_list { position: relative; }
 #history .h_year { padding-top: 80px; }
 #history .h_year:nth-child(1) { padding-top: 0px; }
 #history .h_list img { width: 100%; }
 
 #history .swiper-button-next:after { color: #999; font-size: 2.5rem; }
-#history .next { width: 50px; height: 50px; background: rgba(255,255,255,0.1); border-radius: 30px; position: absolute; top: 47%; }
+#history .next { width: 50px; height: 50px; background: rgba(0,0,0,0.5); border-radius: 30px; position: absolute; top: 47%; transition: background 0.5s; }
 
 #history .next:hover { background: rgba(255,255,255,0.3); }
 
@@ -195,6 +197,7 @@ body { font-family: 'Raleway', 'Gothic A1' , 'Yeseva One'; font-size: 1.6rem; li
 @media (max-width:1200px){
     #history { padding: 50px 0 50px; }
     #history P { font-size: 2.0rem; padding-bottom: 10px; }
+   /*  #history .year_speed { padding-top: 40px; } */
     #history .h_year { padding-top: 40px; }
 }
 
