--- a/css/main.css
+++ b/css/main.css
@@ -564,7 +564,7 @@ body { font-family: 'Raleway', 'Gothic A1' , 'Yeseva One'; font-size: 1.6rem; li
 #history .h_2021 img { width: 100%; }
 
 #history .swiper-button-next:after { color: #999; font-size: 2.5rem; }
-#history .next { width: 50px; height: 50px; background: rgba(255,255,255,0.1); border-radius: 30px; position: absolute; top: 47%; }
+#history .next { width: 50px; height: 50px; background: rgba(0,0,0,0.5); border-radius: 30px; position: absolute; top: 47%; transition: background 0.5s; }
 
 #history .next:hover { background: rgba(255,255,255,0.3); }
 
